// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table Component > applies custom className when provided 1`] = `
<div>
  <div
    class="w-full max-w-4xl custom-table-class"
  >
    <table
      class="w-full text-black bg-white text-sm md:text-base"
    >
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-left text-base md:text-lg font-semibold pr-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            PLATFORM
          </th>
          <th
            class="text-right text-base md:text-lg font-semibold pl-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              httml
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              LINKEDIN
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://www.linkedin.com/in/emirhan-kemal-kosem-259569b3/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              MEDIUM
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://medium.com/emirhankemalkosem
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              TWITTER
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://x.com/KsemEmir
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              INSTAGRAM
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://www.instagram.com/emirhankemalkosem/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              BLUESKY
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://bsky.app/profile/emirkosem.bsky.social
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table Component > renders links when linkField is provided 1`] = `
<div>
  <div
    class="w-full max-w-4xl "
  >
    <table
      class="w-full text-black bg-white text-sm md:text-base"
    >
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-left text-base md:text-lg font-semibold pr-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            PLATFORM
          </th>
          <th
            class="text-right text-base md:text-lg font-semibold pl-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <a
              class="text-gray-500 hover:text-gray-800 underline flex items-center justify-end text-[right]"
              href="https://github.com/KemalEmirhan"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="whitespace-nowrap max-w-[100px] truncate md:max-w-none"
              >
                https://github.com/KemalEmirhan
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-up-right w-3 h-3 md:w-4 md:h-4 flex-shrink-0 ml-1"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 7h10v10"
                />
                <path
                  d="M7 17 17 7"
                />
              </svg>
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table Component > renders regular text when linkField is not provided 1`] = `
<div>
  <div
    class="w-full max-w-4xl "
  >
    <table
      class="w-full text-black bg-white text-sm md:text-base"
    >
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-left text-base md:text-lg font-semibold pr-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            PLATFORM
          </th>
          <th
            class="text-right text-base md:text-lg font-semibold pl-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              httml
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              LINKEDIN
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://www.linkedin.com/in/emirhan-kemal-kosem-259569b3/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              MEDIUM
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://medium.com/emirhankemalkosem
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              TWITTER
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://x.com/KsemEmir
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              INSTAGRAM
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://www.instagram.com/emirhankemalkosem/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              BLUESKY
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://bsky.app/profile/emirkosem.bsky.social
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table Component > renders with empty data array 1`] = `
<div>
  <div
    class="w-full max-w-4xl "
  >
    <table
      class="w-full text-black bg-white text-sm md:text-base"
    >
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-left text-base md:text-lg font-semibold pr-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            PLATFORM
          </th>
          <th
            class="text-right text-base md:text-lg font-semibold pl-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      />
    </table>
  </div>
</div>
`;

exports[`Table Component > should render 1`] = `
<div>
  <div
    class="w-full max-w-4xl "
  >
    <table
      class="w-full text-black bg-white text-sm md:text-base"
    >
      <thead>
        <tr
          class="border-b border-black"
        >
          <th
            class="text-left text-base md:text-lg font-semibold pr-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            PLATFORM
          </th>
          <th
            class="text-right text-base md:text-lg font-semibold pl-2 pb-1 mb-1 px-2 md:px-4 lg:px-0"
          >
            ACCOUNT
          </th>
        </tr>
      </thead>
      <tbody
        class="space-y-2 md:space-y-1"
      >
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              GITHUB
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              httml
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              LINKEDIN
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://www.linkedin.com/in/emirhan-kemal-kosem-259569b3/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              MEDIUM
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://medium.com/emirhankemalkosem
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              TWITTER
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://x.com/KsemEmir
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              INSTAGRAM
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://www.instagram.com/emirhankemalkosem/
            </span>
          </td>
        </tr>
        <tr
          class="px-2 md:px-4 lg:px-0 relative border-b border-black border-dashed"
        >
          <td
            class="relative pr-2 pl-0 align-baseline py-2"
          >
            <span
              class="text-[left] uppercase"
            >
              BLUESKY
            </span>
          </td>
          <td
            class="relative pr-0 pl-2 align-baseline py-2"
          >
            <span
              class="text-[right] uppercase"
            >
              https://bsky.app/profile/emirkosem.bsky.social
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
